# timeseries_process

./: .gitignore  .travis.yml  AUTHORS  COPYING  COPYRIGHT.md  Dockerfile  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  mingw_cross_example.txt  mingw_cross_win32.txt  mingw_cross_win64.txt  timeseries_process-i686-w64-mingw32.static-2019.911.0.7z
.github/: release-drafter.yml
.github/workflows/: gfortran_compile.yml
00_bern2time/: Makefile  Makefile.am  bern2time.for  bern2time_FN.for  getpl.for
01_raw/: Makefile  Makefile.am  comfilt.for  comfilt_trend.for  plot_ts.for  plot_ts.inp.example
02_remove_trend/: Makefile  Makefile.am  plot_ts.for  remove.for  remove_trend.for
03_remove_period/: Makefile  Makefile.am  plot_ts.for  remove.for  remove_period.for
04_remove_antenna/: Makefile  Makefile.am  plot_ts.for  plot_ts_2.for  remove.for  remove_antenna.for
05_Fit_velocity/: Makefile.am  fit.for
05_post_dis/: Makefile  README  post_dis.m  post_dis_note.asv
06_Fit_velocity/: Makefile  fit.for  plot_ts.for
common/: bubblesort.for  lsqr.for  version.rc  version.rc.in
data/format/: comfilt.inp.format
icons/: genico.sh
python/: plot_ts.py
src/: Makefile.am  bern2time.for  comfilt.for  comfilt_trend.for  fit.for  getpl.for  int2char.for  order.txt  plot_ts.for  remove_antenna.for  remove_period.for  remove_trend.for
src/hw2020/: comfilt.for  plot_ts.for
util/: Makefile.am  plot_ts.for
windres/: bern2time.rc  comfilt.rc  comfilt_trend.rc  fit.rc  genrc.sh  getpl.rc  plot_ts.rc  raw.rc  remove_antenna.rc  remove_period.rc  remove_trend.rc  version.rc
